--- a/style.css
+++ b/style.css
@@ -8,4 +8,35 @@
 
 body {
   background-color: var(--bg-color);
+  color: var(--primary-color);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 0;
+  font-family: var(--font-family);
+}
+
+h1 {
+  font-size: 100px;
+}
+
+h3 {
+  font-size: 50px;
+  margin-top: 20px;
+}
+
+.mensagem {
+  font-size: 38px;
+  margin-top: 60px;
+}
+
+.box {
+  border: 2px solid var(--primary-color);
+  display: inline-block;
+  font-size: 4em;
+  padding: 10px;
+  margin: 20px;
 }
